# AVINS-Slam

./: README.md
docs/: Timestamp_Sync_Principle.md  VINS_Surfel_Timestamp_Sync_Guide.md
output/: extrinsic_parameter.csv  vio.csv  vio_loop.csv
scripts/: debug_avins_slam.sh  launch_vins_surfel_system.sh  manual_launch_guide.sh  progressive_test.sh  visualize_sync_principle.py
src/DenseSurfelMapping/surfel_fusion/launch/: avins_slam_all.launch  surfel.rviz  vins_realsense.launch
src/DenseSurfelMapping/surfel_fusion/src/: surfel_map.cpp  surfel_map.h
src/VINS-Fusion/camera_models/: CMakeLists.txt
src/VINS-Fusion/camera_models/src/calib/: CameraCalibration.cc
src/VINS-Fusion/camera_models/src/gpl/: EigenQuaternionParameterization.cc
src/VINS-Fusion/config/launch/: imu_retimestamp.launch  rs_camera_vins_ir_only.launch
src/VINS-Fusion/config/realsense_d435i_fix/: left.yaml  realsense_stereo_imu_config.yaml
src/VINS-Fusion/global_fusion/: CMakeLists.txt
src/VINS-Fusion/loop_fusion/: CMakeLists.txt
src/VINS-Fusion/loop_fusion/src/: pose_graph.h
src/VINS-Fusion/vins_estimator/: CMakeLists.txt
src/VINS-Fusion/vins_estimator/launch/: avins_slam_complete.launch  image_timestamp_sync.launch  imu_retimestamp.launch  vins_camera.launch  vins_camera_ir_only.launch  vins_camera_low_bandwidth.launch  vins_camera_mapping.launch  vins_camera_minimal.launch  vins_camera_optimized.launch  vins_camera_surfel.launch  vins_surfel_timestamp_sync.launch
src/VINS-Fusion/vins_estimator/src/tools/: image_timestamp_synchronizer.cpp  imu_retimestamp_node.cpp  (+1 more)
(+1 files in other folders)
